notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodpal-notification-service
  labels:
    app: foodpal-notification-service
spec:
  selector:
    app: foodpal-notification-service
  ports:
  - port: 80
    targetPort: 3002
    protocol: TCP
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: foodpal-notification-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: foodpal-notification-service
    spec:
      containers:
      - name: foodpal-notification-service
        image: botix1/foodpal-notification-service
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
